docker-compose written

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,47 +2,32 @@ version: "3.8"
 
 services:
   mysql:
-    user: "${UID}:${GID}" 
-    image: mysql:5.7
     container_name: mysql
-    environment:
-      MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: devops
-      MYSQL_USER: admin
-      MYSQL_PASSWORD: admin
+    image: mysql
+    environment: # Corrected from 'enviroments'
+      MYSQL_DATABASE: "devops"
+      MYSQL_ROOT_PASSWORD: "root"
     volumes:
-      - ./mysql-data:/var/lib/mysql
-      - ./message.sql:/docker-entrypoint-initdb.d/message.sql  
+      - mysql-data:/var/lib/mysql
     networks:
-      - twotier
-    healthcheck:
-      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-uroot", "-proot"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
-      start_period: 60s
+      - two-tier
 
-  flask-app:
-    image: trainwithshubham/two-tier-flask-app:latest
-    container_name: flask-app
+  flask:
+    build:
+      context: .
+    container_name: two-tier-backend
     ports:
       - "5000:5000"
-    environment:
+    environment: # Corrected from 'enviroments'
       MYSQL_HOST: mysql
       MYSQL_USER: root
       MYSQL_PASSWORD: root
       MYSQL_DB: devops
-    depends_on:
-      - mysql
     networks:
-      - twotier
-    restart: always
-    healthcheck:
-      test: ["CMD-SHELL", "curl -f http://localhost:5000/health || exit 1"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
-      start_period: 30s
+      - two-tier
+
+volumes:
+  mysql-data:
 
 networks:
-  twotier:
+  two-tier:
