--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,21 +4,27 @@ services:
   mysql:
     container_name: mysql
     image: mysql
-    environment: # Corrected from 'enviroments'
+    environment: 
       MYSQL_DATABASE: "devops"
       MYSQL_ROOT_PASSWORD: "root"
     volumes:
       - mysql-data:/var/lib/mysql
     networks:
       - two-tier
-
+    restart: always
+    healthchecks:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-uroot", "-proot" ]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 60s
   flask:
     build:
       context: .
     container_name: two-tier-backend
     ports:
       - "5000:5000"
-    environment: # Corrected from 'enviroments'
+    environment: 
       MYSQL_HOST: mysql
       MYSQL_USER: root
       MYSQL_PASSWORD: root
@@ -27,6 +33,13 @@ services:
       - two-tier
     depends_on:
       - mysql
+    restart: always
+    healthchecks:
+      test: ["CMD-SHELL", "curl -f http://localhost:5000/health || exit 1"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 60s
 
 volumes:
   mysql-data:
